--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
     "description": "Hyperf DB driver for iqomp/model",
     "type": "library",
     "license": "MIT",
-    "version": "1.0.3",
+    "version": "2.0.0",
     "authors": [
         {
             "name": "Iqbal Fauzi",
@@ -11,28 +11,23 @@
         }
     ],
     "require": {
-        "iqomp/model": "^1.0",
+        "iqomp/model": "^2.0",
         "hyperf/db-connection": "^2.1"
     },
     "extra": {
-        "iqomp/config": "iqomp/config/"
+        "hyperf": {
+            "config": "Iqomp\\ModelHyperfDb\\ConfigProvider"
+        }
     },
     "autoload": {
         "psr-4": {
             "Iqomp\\ModelHyperfDb\\": "src/"
         }
     },
-    "autoload-dev": {
-        "psr-4": {
-            "Iqomp\\ModelHyperfDb\\Tests\\": "tests/"
-        }
-    },
     "require-dev": {
-        "phpunit/phpunit": "^9.5",
         "squizlabs/php_codesniffer": "^3.5"
     },
     "scripts": {
-        "test": "./vendor/bin/phpunit tests",
         "lint": "./vendor/bin/phpcs --standard=PSR12 src"
     }
 }
